# rgonline-gs-data-integration

./: .envrc  .gitignore  Dockerfile.dev  Dockerfile.qleverui  Qleverfile  common_profiles.csv  compose.yml  fuseki-config-lightweight.ttl  fuseki-config.ttl  justfile  project-structure.md  pyproject.toml  readme.md  waterfall.html
.github/workflows/: ghcr-dev-image.yml
data/: name_normalization_config.json
data/examples/: albertus_blarer.ttl  example-from-gnd-doc.rdf  example-person-in-domain.ttl  heinrich_bodo.ttl
data/tabular/: common_profiles.csv  common_profiles.pkl
docs/: competency-questions.md  cqs.md  project-structure.md  singularity.md
docs/decisions/: 0005-qlever-over-rdf4j-federation.md  0006-harmonize-to-gndo.md  0007-matching-rules.md  0008-dnb-local-materialization.md  dnb-skip-materialization.md
docs/dnb/: technical-specs.md
mappings/: harmonize.ttl
mappings/dnb/: create_min_examples.py  reduce.py  reduce_persons.py  reduce_places.py
mappings/gs/: clean-amts.rq  clean-orgs.rq  clean-persons.rq  clean.rq  harmonize.rq  reduce.rq
mappings/rgo/: create_min_examples.rq  harmonize.rq  reduce.rq  tbox.ttl
queries/acquisition/: source-dnb-construct-literal-occ.rq  source-dnb-construct.rq
queries/cq/: 01-cross-source-identity-disagreement.rq  (+9 more)
scripts/: fetch_gndo_html.sh  report_update.py  setup_ghcr_token.sh  setup_qlever_ui.py  setup_rdf4j.py  write_sameas_from_predictions.py
singularity/: Singularity.dev.def
src/: export_harmonized_examples.py
tests/: test_acquisition_source_dnb.py  test_harmonization_source_dnb.py
(+56 files in other folders)
