[project]
name = "gs-data-integration"
version = "0.1.0"
description = "Historical ecclesiastical person data integration pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rdflib>=7.0",
    "pandas",
    "splink",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnb", "src/gs", "src/rgo", "src/er"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
